--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "draftjs-to-html": "^0.9.1",
     "echarts": "^4.6.0",
     "echarts-for-react": "^2.0.15-beta.1",
     "eslint": "^6.6.0",
@@ -57,6 +58,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.4",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "resolve": "1.15.0",
